data/derived/comb/progs/unify/prog7385.ml.out
Characters 208-223:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type 'a list list * 'b list list
       Type int is not compatible with type 'a list 
